import org.jetbrains.kotlin.gradle.dsl.JvmTarget

plugins {
    id 'java-library'
    id 'org.jetbrains.kotlin.jvm'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'jacoco'
    alias libs.plugins.modDevGradle
    //alias libs.plugins.shadow
    alias libs.plugins.spotless
    alias libs.plugins.lombok
}

group = maven_group
// Formats the mod version to include the loader, Minecraft version, and '-SNAPSHOT-<timestamp>' if enabled.
boolean isSnapshot = System.getenv("SNAPSHOT")
version = "${mod_version}" + (isSnapshot ? "-SNAPSHOT" : "")
boolean isCI = System.getenv("CI") != null

java {
    toolchain.languageVersion = JavaLanguageVersion.of(25)
}

kotlin {
    compilerOptions {
        jvmTarget = JvmTarget.JVM_25
    }
}

sourceSets {
    // Include resources generated by data generators.
    main.resources {
        srcDir 'src/generated/resources'
    }

    minecraftCompat {
        compileClasspath += main.compileClasspath
    }

    main {
        compileClasspath += minecraftCompat.output
    }

    client {
        compileClasspath += main.output
        runtimeClasspath += main.output + main.runtimeClasspath
    }

    test {
        compileClasspath += main.output + main.compileClasspath
        runtimeClasspath += main.output + main.runtimeClasspath
    }

    extra {
        compileClasspath += main.output
        runtimeClasspath += main.output + main.runtimeClasspath
    }

    clientExtra {
        compileClasspath += client.output + extra.compileClasspath
        runtimeClasspath += client.output + client.runtimeClasspath + extra.runtimeClasspath
    }
}

configurations {
    localRuntime {
        canBeConsumed = false
        canBeResolved = false
    }
    extraLocalRuntime {
        canBeConsumed = false
        canBeResolved = false
    }
    clientLocalRuntime {
        canBeConsumed = false
        canBeResolved = false
    }
    clientExtraLocalRuntime {
        canBeConsumed = false
        canBeResolved = false
    }

    // set these as unresolvable so we don't accidentally force all dependents to use them with us
    clientRuntimeOnly.canBeResolved = false
    extraRuntimeOnly.canBeResolved = false
    clientExtraRuntimeOnly.canBeResolved = false
    testImplementation.canBeResolved = false
    testRuntimeOnly.canBeResolved = false

    extraRuntimeClasspath.extendsFrom extraLocalRuntime
    clientRuntimeClasspath.extendsFrom clientLocalRuntime
    clientExtraRuntimeClasspath.extendsFrom extraLocalRuntime
    clientExtraRuntimeClasspath.extendsFrom clientExtraLocalRuntime

    renderNurseCfg {
        canBeConsumed = false
    }
}

apply from: "$rootDir/gradle/scripts/jars.gradle"
apply from: "$rootDir/gradle/scripts/moddevgradle.gradle"
apply from: "$rootDir/gradle/scripts/repositories.gradle"
apply from: "$rootDir/dependencies.gradle"
apply from: "$rootDir/gradle/scripts/resources.gradle"
apply from: "$rootDir/gradle/scripts/publishing.gradle"
apply from: "$rootDir/gradle/scripts/spotless.gradle"
apply from: "$rootDir/gradle/scripts/docs.gradle"

tasks.named('runData').configure {
    def dataModClasses = providers.provider {
        [sourceSets.main, sourceSets.client].collectMany { sourceSet ->
            def outputs = [] as List<File>
            outputs.addAll(sourceSet.output.classesDirs.files)
            if (sourceSet.output.resourcesDir != null) {
                outputs.add(sourceSet.output.resourcesDir)
            }
            outputs
        }.findAll { it != null && it.exists() }
                .collect { "${mod_id}%%${it.absolutePath}" }
                .join(File.pathSeparator)
    }
    environmentProperty.put('MOD_CLASSES', dataModClasses)
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs << "-Xlint:-removal"
    options.compilerArgs << "-Aquiet=true" // Suppress mixin notes
}

lombok {
    version = "1.18.46"
}

jacoco {
    applyTo runGameTestServer
}

tasks.named('runGameTestServer').configure {
    jacoco {
        includes = ['com.gregtechceu.gtceu.*']
    }
}

jacocoTestReport {
    doFirst {
        try {
            runGameTestServer.exec()
        } catch (RuntimeException ignored) {}
    }
    doLast {
        println "Coverage report location:"
        println " - file://${layout.buildDirectory.dir('coverage').map(a -> a.file('index.html')).get()}"
        println " - file://${layout.buildDirectory.dir('coverage').map(a -> a.file('coverage.xml')).get()}"
    }
    executionData runGameTestServer
    sourceSets sourceSets.test
    reports {
        csv.required = false
        xml.required = true
        html.outputLocation = layout.buildDirectory.dir('coverage')
        xml.outputLocation = layout.buildDirectory.dir('coverage').map(a -> a.file('coverage.xml'))
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: '**/client/**')
            fileTree(dir: it, exclude: '**/mixins/**')
        }))
    }
}
